gcc/testsuite/rust/rustc/ui/macros/macro-path-prelude-fail-3.rs
fn main() {
    inline!(); // { dg-error "" "" { target *-*-* } }
}

